--- a/colab/GPU.ipynb
+++ b/colab/GPU.ipynb
@@ -61,7 +61,7 @@
       "outputs": [],
       "source": [
         "#@title <b>TavernAI</b>\n",
-        "#@markdown <- Click For Start (≖ ‸ ≖ ✿)\n",
+        "#@markdown <- Click For Start (≖ ‸ ≖ ✿)/\n",
         "\n",
         "Model = \"Pygmalion 6B\" #@param [ \"Pygmalion 6B\", \"Pygmalion 6B Dev\"] {allow-input: true}\n",
         "Version = \"Official\" \n",
