--- a/colab/GPU.ipynb
+++ b/colab/GPU.ipynb
@@ -55,8 +55,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
-        "id": "hps3qtPLFNBb"
+        "id": "hps3qtPLFNBb",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -96,7 +96,7 @@
         "  if not use_google_drive:\n",
         "    return\n",
         "  \n",
-        "  src_folder = \"/TavernAIColab_mobile/public/characters\"\n",
+        "  src_folder = \"/TavernAIColab/public/characters\"\n",
         "  dst_folder = \"/content/drive/MyDrive/TavernAI/characters\"\n",
         "\n",
         "  for filename in os.listdir(src_folder):\n",
@@ -166,9 +166,9 @@
         "!nvm install 19.1.0\n",
         "!nvm use 19.1.0\n",
         "!node -v\n",
-        "!git clone https://github.com/ytt246/TavernAIColab_mobile -b test\n",
+        "!git clone https://github.com/TavernAI/TavernAIColab\n",
         "copy_characters(use_google_drive)\n",
-        "%cd TavernAIColab_mobile\n",
+        "%cd TavernAIColab\n",
         "!npm install\n",
         "time.sleep(1)\n",
         "%env colab=2\n",
@@ -186,7 +186,6 @@
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
     "colab": {
       "provenance": []
     },
@@ -197,7 +196,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
