--- a/colab/GPU.ipynb
+++ b/colab/GPU.ipynb
@@ -52,6 +52,14 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Yes, I know charaCloud doesn't look the best. But hey at least it (kinda) works"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
