--- a/colab/GPU.ipynb
+++ b/colab/GPU.ipynb
@@ -56,7 +56,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Yes, I know charaCloud doesn't look the best. But hey at least it (kinda) works"
+        "Yes, I know charaCloud doesn't look the best. But hey at least it (kinda) works\n",
+        "\n",
+        "Only tested on Pygmalion. Have not tested on OAI or others"
       ]
     },
     {
