--- a/colab/GPU.ipynb
+++ b/colab/GPU.ipynb
@@ -58,7 +58,9 @@
       "source": [
         "Yes, I know charaCloud doesn't look the best. But hey at least it (kinda) works\n",
         "\n",
-        "Only tested on Pygmalion. Have not tested on OAI or others"
+        "Only tested on Pygmalion. Have not tested on OAI or others\n",
+        "\n",
+        "Oh and you can't actually swipe the messages, you have to use the left and right arrow after enabling it in settings."
       ]
     },
     {
