--- a/colab/GPU.ipynb
+++ b/colab/GPU.ipynb
@@ -177,7 +177,7 @@
         "!nvm install 19.1.0\n",
         "!nvm use 19.1.0\n",
         "!node -v\n",
-        "!git clone https://github.com/ytt246/TavernAIColab_mobile -b test\n",
+        "!git clone https://github.com/ytt246/TavernAIColab_mobile -b 1.3\n",
         "copy_characters(use_google_drive)\n",
         "%cd TavernAIColab_mobile\n",
         "!npm install\n",
