--- a/colab/GPU.ipynb
+++ b/colab/GPU.ipynb
@@ -37,6 +37,16 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**If you can use a PC:**\n",
+        "\n",
+        "You can run KoboldAI (Colab) and TavernAI on your PC, and access them on your mobile. This could give you a faster load time because all your characters and chats are stored locally. There are many guides for this like [this one](https://www.reddit.com/r/CharacterAi_NSFW/comments/10otlli/dummys_guide_to_using_pygmalion_on_google_colab/?utm_source=share&utm_medium=ios_app&utm_name=iossmf), but use [this TavernAI](https://github.com/ytt246/TavernAI_mobile) for mobile-friendly interface."
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
