--- a/colab/GPU.ipynb
+++ b/colab/GPU.ipynb
@@ -50,7 +50,7 @@
         "\n",
         "Also, ***BACK UP YOUR CHARACTERS BEFORE USING THE NEW NOTEBOOK!!!*** 1.3.x will convert all your characters to a different format incompatible with 1.2.8. Back them up in case you want to roll back to this version. If you are using google drive it should be ```My Drive/TavernAI/```. I think only the characters are affected, but I recommend backing up the chats as well just in case.\n",
         "\n",
-        "If you want to keep using this one, nothing to worry about. The settings page should also look slightly better now. But considering 1.3.x now exports characters as .webp instead of .png, you might be \"forced\" to update when most character creators start using the new format."
+        "If you want to keep using this one, nothing to worry about. The settings page should also look slightly better now."
       ]
     },
     {
