--- a/colab/GPU.ipynb
+++ b/colab/GPU.ipynb
@@ -84,7 +84,7 @@
         "#@title <b>TavernAI</b>\n",
         "#@markdown <- Click For Start (≖ ‸ ≖ ✿)\n",
         "\n",
-        "Model = \"Pygmalion 6B\" #@param [ \"Pygmalion 6B\", \"Pygmalion 6B Dev\"] {allow-input: true}\n",
+        "Model = \"PPO Shygmalion 6B\" #@param [\"Pygmalion 6B (disabled)\", \"Pygmalion 6B Dev (disabled)\", \"Pygway 6B\", \"Pygway v8p4\", \"PPO Shygmalion 6B\", \"Dolly_Pyg-6B\", \"Dolly_Shygmalion-6B\"] {allow-input: true}\n",
         "Version = \"Official\" \n",
         "KoboldAI_Provider = \"Localtunnel\" #@param [\"Localtunnel\", \"Cloudflare\"]\n",
         "use_google_drive = True #@param {type:\"boolean\"}\n",
@@ -133,16 +133,36 @@
         "Revision = \"\"\n",
         "\n",
         "if Model == \"Pygmalion 6B\":\n",
-        "  Model = \"PygmalionAI/pygmalion-6b\"\n",
-        "  path = \"\"\n",
-        "  download = \"\"\n",
-        "  Version = \"United\"\n",
+        "  print(\"Please select a different model\")\n",
+        "  exit()\n",
         "elif Model == \"Pygmalion 6B Dev\":\n",
-        "  Model = \"PygmalionAI/pygmalion-6b\"\n",
-        "  Revision = \"--revision dev\"\n",
+        "  print(\"Please select a different model\")\n",
+        "  exit()\n",
+        "elif Model == \"Pygway 6B\":\n",
+        "  Model = \"TehVenom/PPO_Pygway-6b\"\n",
         "  path = \"\"\n",
-        "  Version = \"United\"\n",
         "  download = \"\"\n",
+        "  Version = \"United\"\n",
+        "elif Model == \"Pygway v8p4\":\n",
+        "  Model = \"TehVenom/PPO_Pygway-V8p4_Dev-6b\"\n",
+        "  path = \"\"\n",
+        "  download = \"\"\n",
+        "  Version = \"United\"\n",
+        "elif Model == \"PPO Shygmalion 6B\":\n",
+        "  Model = \"TehVenom/PPO_Shygmalion-6b\"\n",
+        "  path = \"\"\n",
+        "  download = \"\"\n",
+        "  Version = \"United\"\n",
+        "elif Model == \"Dolly_Pyg-6B\":\n",
+        "  Model = \"TehVenom/AvgMerge_Dolly-Pygmalion-6b\"\n",
+        "  path = \"\"\n",
+        "  download = \"\"\n",
+        "  Version = \"United\"\n",
+        "elif Model == \"Dolly_Shygmalion-6B\":\n",
+        "  Model = \"TehVenom/Dolly_Shygmalion-6b\"\n",
+        "  path = \"\"\n",
+        "  download = \"\"\n",
+        "  Version = \"\"\n",
         "\n",
         "if Provider == \"Localtunnel\":\n",
         "  tunnel = \"--localtunnel yes\"\n",
@@ -203,6 +223,21 @@
         "print('')\n",
         "print('###TavernAI LINK###')\n",
         "!lt --port 8000\n"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# GPU Edition Model Descriptions\n",
+        "| Model | Style | Description |\n",
+        "| --- | --- | --- |\n",
+        "| [Pygmalion](https://huggingface.co/KoboldAI/GPT-J-6B-Adventure) by PygmalionAI | Chatbot | Pygmalion is a chat model that has been based on a few models that came before it. First the model originates from LitV2, it was then trained by Haru on a chat dataset to create ConvoGPT. ConvoGPT was then trained by PygmalionAI on chat data that contains longer responses and emotions. Making for a higher quality chat experience than you can get from other models such as Erebus that are not directly trained on chatting. |\n",
+        "| [Pygway 6B](https://huggingface.co/TehVenom/PPO_Pygway-6b) by TehVenom | Chatbot | This is a mix between Pygmalion 6B and Janeway, designed especially to carry the coherence and verbosity of Pyg's v8, while having the ERP ability of 6B. |\n",
+        "| [Pygway v8P4](https://huggingface.co/TehVenom/PPO_Pygway-V8p4_Dev-6b) by TehVenom | Chatbot | This is a mixed model between Janeway 6B and Pygmalion 6B's Dev Branch v8P4. This bot is guided towards a chat-oriented roleplay, and aims to provide the verbosity and creativity of v8, and mitigate the NSFW issues of v8P4 with Janeway. |\n",
+        "|[PPO Shygmalion 6B](https://huggingface.co/TehVenom/PPO_Shygmalion-6b) by TehVenom | Chatbot | Shygmalion is one of the more favorited mixed models of the bunch. A mix of Shinen, ppo_HH, and Pygmalion 6B, this model can provide a great ERP experience. If you encounter issues with POV, using bias may solve it. |\n",
+        "|[Dolly_Pyg-6B](https://huggingface.co/TehVenom/AvgMerge_Dolly-Pygmalion-6b) by TehVenom | Chatbot | Dolly_Pyg-6B is a merge between LLaMA LoRA Dolly and Pygmalion 6B. Designed for verbosity, crativity, and chat roleplay, this bot can do both NSFW and SFW chatting."
       ]
     }
   ],
