--- a/colab/GPU.ipynb
+++ b/colab/GPU.ipynb
@@ -133,11 +133,9 @@
         "Revision = \"\"\n",
         "\n",
         "if Model == \"Pygmalion 6B\":\n",
-        "  print(\"Please select a different model\")\n",
-        "  exit()\n",
+        "  raise SystemExit(\"Please select a different model\")\n",
         "elif Model == \"Pygmalion 6B Dev\":\n",
-        "  print(\"Please select a different model\")\n",
-        "  exit()\n",
+        "  raise SystemExit(\"Please select a different model\")\n",
         "elif Model == \"Pygway 6B\":\n",
         "  Model = \"TehVenom/PPO_Pygway-6b\"\n",
         "  path = \"\"\n",
