--- a/colab/GPU.ipynb
+++ b/colab/GPU.ipynb
@@ -84,7 +84,7 @@
         "#@title <b>TavernAI</b>\n",
         "#@markdown <- Click For Start (≖ ‸ ≖ ✿)\n",
         "\n",
-        "Model = \"PPO Shygmalion 6B\" #@param [\"Pygmalion 6B (disabled)\", \"Pygmalion 6B Dev (disabled)\", \"Pygway 6B\", \"Pygway v8p4\", \"PPO Shygmalion 6B\", \"Dolly_Pyg-6B\", \"Dolly_Shygmalion-6B\"] {allow-input: true}\n",
+        "Model = \"Pygmalion 6B (disabled)\" #@param [\"Pygmalion 6B (disabled)\", \"Pygmalion 6B Dev (disabled)\", \"Pygway 6B\", \"Pygway v8p4\", \"PPO Shygmalion 6B\", \"Dolly_Pyg-6B\", \"Dolly_Shygmalion-6B\"] {allow-input: true}\n",
         "Version = \"Official\" \n",
         "KoboldAI_Provider = \"Localtunnel\" #@param [\"Localtunnel\", \"Cloudflare\"]\n",
         "use_google_drive = True #@param {type:\"boolean\"}\n",
@@ -132,9 +132,9 @@
         "    print(f\"{src_file} copied to {dst_folder}\")\n",
         "Revision = \"\"\n",
         "\n",
-        "if Model == \"Pygmalion 6B\":\n",
+        "if Model == \"Pygmalion 6B (disabled)\":\n",
         "  raise SystemExit(\"Please select a different model\")\n",
-        "elif Model == \"Pygmalion 6B Dev\":\n",
+        "elif Model == \"Pygmalion 6B Dev (disabled)\":\n",
         "  raise SystemExit(\"Please select a different model\")\n",
         "elif Model == \"Pygway 6B\":\n",
         "  Model = \"TehVenom/PPO_Pygway-6b\"\n",
