Revert "Update GPU.ipynb"
This reverts commit c9a4146e9822977bdf171468bca19d4d4f9893d2.

--- a/colab/GPU.ipynb
+++ b/colab/GPU.ipynb
@@ -133,9 +133,11 @@
         "Revision = \"\"\n",
         "\n",
         "if Model == \"Pygmalion 6B\":\n",
-        "  raise SystemExit(\"Please select a different model\")\n",
+        "  print(\"Please select a different model\")\n",
+        "  exit()\n",
         "elif Model == \"Pygmalion 6B Dev\":\n",
-        "  raise SystemExit(\"Please select a different model\")\n",
+        "  print(\"Please select a different model\")\n",
+        "  exit()\n",
         "elif Model == \"Pygway 6B\":\n",
         "  Model = \"TehVenom/PPO_Pygway-6b\"\n",
         "  path = \"\"\n",
