--- a/colab/GPU.ipynb
+++ b/colab/GPU.ipynb
@@ -47,6 +47,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -60,9 +61,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "hCpoIHxYcDGs"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "#@title <-- Tap this if you play on Mobile { display-mode: \"form\" }\n",
@@ -84,7 +83,7 @@
         "#@title <b>TavernAI</b>\n",
         "#@markdown <- Click For Start (≖ ‸ ≖ ✿)\n",
         "\n",
-        "Model = \"Pygmalion 6B\" #@param [ \"Pygmalion 6B\", \"Pygmalion 6B Dev\"] {allow-input: true}\n",
+        "Model = \"PPO_Pygway-V8p4_Dev-6b\" #@param [\"PPO_Pygway-V8p4_Dev-6b\", \"Dolly_Shygmalion-6b\"] {allow-input: true}\n",
         "Version = \"Official\" \n",
         "KoboldAI_Provider = \"Localtunnel\" #@param [\"Localtunnel\", \"Cloudflare\"]\n",
         "use_google_drive = True #@param {type:\"boolean\"}\n",
@@ -132,13 +131,13 @@
         "    print(f\"{src_file} copied to {dst_folder}\")\n",
         "Revision = \"\"\n",
         "\n",
-        "if Model == \"Pygmalion 6B\":\n",
-        "  Model = \"PygmalionAI/pygmalion-6b\"\n",
+        "if Model == \"Dolly_Shygmalion-6b\":\n",
+        "  Model = \"TehVenom/Dolly_Shygmalion-6b\"\n",
         "  path = \"\"\n",
         "  download = \"\"\n",
         "  Version = \"United\"\n",
-        "elif Model == \"Pygmalion 6B Dev\":\n",
-        "  Model = \"PygmalionAI/pygmalion-6b\"\n",
+        "elif Model == \"PPO_Pygway-V8p4_Dev-6b\":\n",
+        "  Model = \"TehVenom/PPO_Pygway-V8p4_Dev-6b\"\n",
         "  Revision = \"--revision dev\"\n",
         "  path = \"\"\n",
         "  Version = \"United\"\n",
@@ -202,7 +201,7 @@
         "print(url)\n",
         "print('')\n",
         "print('###TavernAI LINK###')\n",
-        "!lt --port 8000\n"
+        "!lt --port 8000"
       ]
     }
   ],
