--- a/colab/GPU.ipynb
+++ b/colab/GPU.ipynb
@@ -37,6 +37,17 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**If you can use a PC:**\n",
+        "\n",
+        "You can run KoboldAI (Colab) and TavernAI on your PC, and access them on your mobile. This could give you a faster load time because all your characters and chats are stored locally. There are many guides for this like [this one](https://www.reddit.com/r/CharacterAi_NSFW/comments/10otlli/dummys_guide_to_using_pygmalion_on_google_colab/?utm_source=share&utm_medium=ios_app&utm_name=iossmf), but use [this TavernAI](https://github.com/ytt246/TavernAI_mobile) for mobile-friendly interface."
+      ]
+    },
+    {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -50,9 +61,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "hCpoIHxYcDGs"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "#@title <-- Tap this if you play on Mobile { display-mode: \"form\" }\n",
@@ -74,7 +83,7 @@
         "#@title <b>TavernAI</b>\n",
         "#@markdown <- Click For Start (≖ ‸ ≖ ✿)\n",
         "\n",
-        "Model = \"Pygmalion 6B\" #@param [ \"Pygmalion 6B\", \"Pygmalion 6B Dev\"] {allow-input: true}\n",
+        "Model = \"PPO_Pygway-V8p4_Dev-6b\" #@param [\"PPO_Pygway-V8p4_Dev-6b\", \"Dolly_Shygmalion-6b\"] {allow-input: true}\n",
         "Version = \"Official\" \n",
         "KoboldAI_Provider = \"Localtunnel\" #@param [\"Localtunnel\", \"Cloudflare\"]\n",
         "use_google_drive = True #@param {type:\"boolean\"}\n",
@@ -122,13 +131,13 @@
         "    print(f\"{src_file} copied to {dst_folder}\")\n",
         "Revision = \"\"\n",
         "\n",
-        "if Model == \"Pygmalion 6B\":\n",
-        "  Model = \"PygmalionAI/pygmalion-6b\"\n",
+        "if Model == \"Dolly_Shygmalion-6b\":\n",
+        "  Model = \"TehVenom/Dolly_Shygmalion-6b\"\n",
         "  path = \"\"\n",
         "  download = \"\"\n",
         "  Version = \"United\"\n",
-        "elif Model == \"Pygmalion 6B Dev\":\n",
-        "  Model = \"PygmalionAI/pygmalion-6b\"\n",
+        "elif Model == \"PPO_Pygway-V8p4_Dev-6b\":\n",
+        "  Model = \"TehVenom/PPO_Pygway-V8p4_Dev-6b\"\n",
         "  Revision = \"--revision dev\"\n",
         "  path = \"\"\n",
         "  Version = \"United\"\n",
@@ -192,7 +201,7 @@
         "print(url)\n",
         "print('')\n",
         "print('###TavernAI LINK###')\n",
-        "!lt --port 8000\n"
+        "!lt --port 8000"
       ]
     }
   ],
