--- a/colab/GPU.ipynb
+++ b/colab/GPU.ipynb
@@ -42,15 +42,19 @@
       "metadata": {},
       "source": [
         "### **1.3.1 Update**\n",
-        "This notebook is running the older version (1.2.8) of TavernAI. I have made an updated 1.3.1 version available below with new features such as charaCloud and swipe.\n",
+        "This notebook is running the older version (1.2.8) of TavernAI. I have made an updated 1.3.1 version available below with new features such as charaCloud and swipe. Or You can still use this version if you want (at least for now)\n",
         "\n",
-        "**Note:** The new version is still receiving frequent updates from TavernAI devs, and I don't intend on keeping up with those. I'll probably only do one big update after everything stabilizes a bit more.\n",
-        "\n",
-        "[So if you decide to use it, expect bugs](https://colab.research.google.com/github/ytt246/TavernAIColab_mobile/blob/1.3/colab/GPU.ipynb). Or You can still use this version if you want (at least for now)\n",
-        "\n",
-        "Also, ***BACK UP YOUR CHARACTERS BEFORE USING THE NEW NOTEBOOK!!!*** 1.3.x will convert all your characters to a different format incompatible with 1.2.8. Back them up in case you want to roll back to this version. If you are using google drive it should be ```My Drive/TavernAI/```. I think only the characters are affected, but I recommend backing up the chats as well just in case.\n",
+        "**Back up your characters before changing the notebook.** 1.3.x will convert all your characters to a different format incompatible with 1.2.8. Back them up in case you want to roll back to this version. If you are using google drive it should be ```My Drive/TavernAI/```. I think only the characters are affected, but I recommend backing up the chat logs as well just in case.\n",
         "\n",
         "If you want to keep using this one, nothing to worry about. The settings page should also look slightly better now. But I think this version won't accept .webp character cards, although I haven't seen anyone use those."
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "aaa"
       ]
     },
     {
@@ -80,7 +84,7 @@
         "#@title <b>TavernAI</b>\n",
         "#@markdown <- Click For Start (≖ ‸ ≖ ✿)/\n",
         "\n",
-        "Model = \"Pygmalion 6B\" #@param [ \"Pygmalion 6B\", \"Pygmalion 6B Dev\"] {allow-input: true}\n",
+        "Model = \"PPO_Pygway-V8p4_Dev-6b\" #@param [\"PPO_Pygway-V8p4_Dev-6b\", \"Dolly_Shygmalion-6b\"] {allow-input: true}\n",
         "Version = \"Official\" \n",
         "KoboldAI_Provider = \"Localtunnel\" #@param [\"Localtunnel\", \"Cloudflare\"]\n",
         "use_google_drive = True #@param {type:\"boolean\"}\n",
@@ -128,13 +132,13 @@
         "    print(f\"{src_file} copied to {dst_folder}\")\n",
         "Revision = \"\"\n",
         "\n",
-        "if Model == \"Pygmalion 6B\":\n",
-        "  Model = \"PygmalionAI/pygmalion-6b\"\n",
+        "if Model == \"Dolly_Shygmalion-6b\":\n",
+        "  Model = \"TehVenom/Dolly_Shygmalion-6b\"\n",
         "  path = \"\"\n",
         "  download = \"\"\n",
         "  Version = \"United\"\n",
-        "elif Model == \"Pygmalion 6B Dev\":\n",
-        "  Model = \"PygmalionAI/pygmalion-6b\"\n",
+        "elif Model == \"PPO_Pygway-V8p4_Dev-6b\":\n",
+        "  Model = \"TehVenom/PPO_Pygway-V8p4_Dev-6b\"\n",
         "  Revision = \"--revision dev\"\n",
         "  path = \"\"\n",
         "  Version = \"United\"\n",
